<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="360dp"
    android:layout_height="255dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/singer_selected"
        android:textSize="16sp"
        android:textColor="#e6000000"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:layout_height="90dp">
        <com.edong.mohelp.view.MusicHomeItem
            android:id="@+id/zhou_jie_lun"
            style="@style/HomeMusicItem"
            android:tag="@string/zhou_jie_lun"/>
        <com.edong.mohelp.view.MusicHomeItem
            android:id="@+id/sun_yan_zi"
            style="@style/HomeMusicItem"
            android:tag="@string/sun_yan_zi"/>
        <com.edong.mohelp.view.MusicHomeItem
            android:id="@+id/xue_zhi_qian"
            style="@style/HomeMusicItem"
            android:tag="@string/xue_zhi_qian"/>
        <com.edong.mohelp.view.MusicHomeItem
            android:id="@+id/tf_boy"
            style="@style/HomeMusicItem"
            android:tag="@string/tf_boy"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="90dp">
        <com.edong.mohelp.view.MusicHomeItem
            android:id="@+id/justin_bieber"
            style="@style/HomeMusicItem"
            android:tag="@string/justin_bieber"/>
        <com.edong.mohelp.view.MusicHomeItem
            android:id="@+id/bruno_mars"
            style="@style/HomeMusicItem"
            android:tag="@string/bruno_mars"/>
        <com.edong.mohelp.view.MusicHomeItem
            android:id="@+id/sia"
            style="@style/HomeMusicItem"
            android:tag="@string/sia"/>
        <com.edong.mohelp.view.MusicHomeItem
            android:id="@+id/taylor_swift"
            style="@style/HomeMusicItem"
            android:tag="@string/taylor_swift"/>
    </LinearLayout>

</LinearLayout>